# River

./: .gitignore  Cargo.toml  README.md  UI_plugin_manifest.md  plugin_manifest.md
crates/river-adapters/network-reqwest/: Cargo.toml
crates/river-adapters/plugin-jamendo/: Cargo.toml
crates/river-adapters/plugin-jamendo/src/: lib.rs
crates/river-adapters/plugin-mangadex/: Cargo.toml
crates/river-adapters/plugin-mangadex/src/: lib.rs
crates/river-adapters/plugin-rss/: Cargo.toml
crates/river-adapters/plugin-rss/src/: lib.rs
crates/river-adapters/plugin-stremio/: Cargo.toml
crates/river-adapters/plugin-stremio/src/: lib.rs
crates/river-adapters/storage-sqlite/: Cargo.toml
crates/river-adapters/storage-sqlite/src/: lib.rs
crates/river-app/: Cargo.toml
crates/river-app/src/: android.rs  core_ui.rs  lib.rs  main.rs  plugin_core.rs  plugin_ui_core.rs  ui_backgrounds.rs  ui_plugin.rs  ui_renderer.rs
crates/river-cli/: Cargo.toml
crates/river-cli/src/: main.rs
crates/river-core/: Cargo.toml
crates/river-core/src/: entities.rs  error.rs  lib.rs  value_objects.rs
crates/river-engine/: Cargo.toml
crates/river-engine/src/: comic_viwer.rs  lib.rs  music_player.rs  pdf_viewer.rs  player_common.rs  video_viewer.rs
crates/river-network/: Cargo.toml
crates/river-network/src/: lib.rs
crates/river-ports/: Cargo.toml
crates/river-ports/src/: inbound.rs  outbound.rs
crates/river-presentation/: Cargo.toml
crates/river-presentation/src/: intent.rs  lib.rs  state.rs  store.rs
crates/river-render/: Cargo.toml
crates/river-render/src/: data_exports.rs  hotplug_ui.rs  lib.rs  main.rs  plugin_ui_core.rs  ui_animations.rs  ui_backgrounds.rs  ui_plugin.rs  ui_renderer.rs
crates/river-render/src/ui_backgrounds/: bg_color.rs  bg_render.rs  bg_spec.rs  expr.rs
crates/river-services/: Cargo.toml
crates/river-services/src/: catalog_service.rs  lib.rs  library_service.rs  plugin_service.rs
crates/river-storage/: Cargo.toml
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md
plugins/ui/: console_plaza_suite.kdl  cyberdeck_pro_suite.kdl  default_android_style.kdl  hyperpulse_cyber_suite.kdl  iphone_ios_suite.kdl  nebula_void_suite.kdl  one_ui_suite.kdl  quantum_glass_suite.kdl  retrowave_outrun_suite.kdl
ui_plugins/: default_android_style.kdl  empty.kdl  one_ui_suite.kdl  studio_hifi_suite.kdl  windows_xp_suite.kdl
