[package]
name = "river-cli"
version = "0.1.0"
edition = "2021"
description = "Terminal runner and interactive verification tool for River media aggregator"

[dependencies]
river-core = { workspace = true }
river-presentation = { workspace = true }
river-engine = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
