[package]
name = "river-engine"
version = "0.1.0"
edition = "2021"
description = "Composition Root for River: Dependency injection container tying ports, adapters, services, and presentation together"

[features]
# Build FFmpeg from source — required for Android TV and Windows targets.
# On Linux/macOS, leave this off and link against the system libavcodec.
ffmpeg-vendored = ["ffmpeg-next/build"]

[dependencies]
river-core         = { workspace = true }
river-ports        = { workspace = true }
river-services     = { workspace = true }
river-storage      = { workspace = true }
river-network      = { workspace = true }
river-presentation = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
reqwest            = { workspace = true }

# ── Video player — FFmpeg ─────────────────────────────────────────────────────

# Safe Rust wrappers around libavcodec / libavformat / libswscale / libswresample.
# Supports H.264, H.265, AV1, VP9, MP4, MKV, HLS, DASH, RTMP out of the box.
ffmpeg-next = { version = "8.1", default-features = false, features = [
    "codec",               # libavcodec — video + audio decode
    "format",              # libavformat — container demux + HLS/DASH/RTMP
    "software-resampling", # libswresample — PCM resampling → f32 stereo 44100 Hz
    "software-scaling",    # libswscale — pixel format conversion → RGBA
] }

# ── Other media players — 100 % pure Rust (zero FFI) ─────────────────────────

# Audio decoding for music player: MP3, AAC, FLAC, OGG, WAV, M4A
symphonia = { version = "0.5", default-features = false, features = [
    "aac", "flac", "mp3", "ogg", "wav", "pcm", "isomp4", "mkv"
] }

# Audio output: CPAL backend (Android AAudio, iOS AudioUnit, WASAPI, ALSA)
rodio = { version = "0.19", default-features = false, features = [
    "symphonia-mp3",
    "symphonia-aac",
    "symphonia-flac",
    "symphonia-vorbis",
    "symphonia-wav",
] }

# Image decoding for comic pages and PDF embedded images
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "webp", "gif"
] }

# CBZ (ZIP) archive extraction
zip = { version = "2", default-features = false, features = ["deflate"] }

# PDF structural parsing
lopdf = "0.33"
