[package]
name = "river-services"
version = "0.1.0"
edition = "2021"
description = "Core backend for API and functionality translation modules, unified KDL schema matching, and use case services"

[dependencies]
river-core = { workspace = true }
river-ports = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
