[package]
name = "river-storage"
version = "0.1.0"
edition = "2021"
description = "Bundled SQLite storage adapter implementing StorageRepository"

[dependencies]
river-core = { workspace = true }
river-ports = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
