[package]
name = "river-network-reqwest"
version = "0.1.0"
edition = "2021"
description = "Async HTTP/Network client adapter implementing NetworkClient"

[dependencies]
river-core = { workspace = true }
river-ports = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
