[package]
name = "river-plugin-jamendo"
version = "0.1.0"
edition = "2021"
description = "Music streaming adapter implementing PluginProvider"

[dependencies]
river-core = { workspace = true }
river-ports = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
